# aibundle

./: .cursorignore  .cursorindexingignore  .cursorrules  .example.aibundle.config  .gitignore  .version  CHANGELOG.md  CLAUDE-RULES.md  CLAUDE.md  CODEREVIEW.md  Cargo.toml  DIAGRAMS.md  FILETREE.md  FileOrder.md  Makefile.toml  README.md  TESTING_CHECKLIST.md  TODO.md  build-install.sh  cargo-clippy-2025-03-23_16-56-16.txt  cleanup-docs.sh  command-line-options.md  example.aibundle.config.toml  keyboard-shortcuts.md  last-hurrah.md  run_tests.sh  rustdoc_task.md  todo-tree-20250604-0835.txt  tokio_runtime_fix_plan.md
.cursor/rules/: base-rust.mdc  bash-commands.mdc  cmd-execution.mdc  cursor-rule-creation.mdc  derived-cursor-rules.mdc  pre-linting-errors.mdc  rustdoc.mdc  updating-code.mdc
.github/workflows/: claude-code-review.yml
.specstory/: .project.json
.specstory/cursor_rules_backups/: derived-cursor-rules.mdc.2025-03-23T16-11-29-677Z  derived-cursor-rules.mdc.2025-03-23T16-20-30-307Z  derived-cursor-rules.mdc.2025-03-26T10-58-52-219Z  derived-cursor-rules.mdc.2025-03-26T11-03-52-582Z  derived-cursor-rules.mdc.2025-03-26T11-12-53-600Z  derived-cursor-rules.mdc.2025-03-26T11-13-54-066Z  derived-cursor-rules.mdc.2025-03-26T11-20-56-031Z  derived-cursor-rules.mdc.2025-03-26T11-26-23-834Z  derived-cursor-rules.mdc.2025-03-26T11-33-15-115Z  derived-cursor-rules.mdc.2025-03-26T11-34-48-080Z  derived-cursor-rules.mdc.2025-03-26T11-43-17-326Z  derived-cursor-rules.mdc.2025-03-26T11-44-54-637Z  derived-cursor-rules.mdc.2025-03-26T11-47-31-775Z  derived-cursor-rules.mdc.2025-03-26T11-51-05-774Z  derived-cursor-rules.mdc.2025-03-26T11-58-50-787Z  derived-cursor-rules.mdc.2025-03-26T12-03-15-503Z  derived-cursor-rules.mdc.2025-03-26T12-04-16-083Z  derived-cursor-rules.mdc.2025-03-26T12-06-16-880Z  derived-cursor-rules.mdc.2025-03-26T12-08-31-217Z  derived-cursor-rules.mdc.2025-03-27T22-39-45-298Z  derived-cursor-rules.mdc.2025-03-27T22-42-47-987Z  derived-cursor-rules.mdc.2025-03-27T22-43-47-616Z  derived-cursor-rules.mdc.2025-03-27T22-55-50-270Z  derived-cursor-rules.mdc.2025-03-27T23-00-51-398Z  derived-cursor-rules.mdc.2025-03-27T23-12-51-898Z  derived-cursor-rules.mdc.2025-03-27T23-42-54-520Z  derived-cursor-rules.mdc.2025-03-28T00-10-55-814Z  (+55 more)
docs/: CONTENT.md  INFO.md  README.md  TODO.md  book.toml  custom.css
monolithic/: main.rs
optimisations/: crash-fixes.md  v1-optimisation-strategy.md
references/: CLAUDE.md  CLIPPY-errors.md  CURRENT_ISSUES.md  FEATURES.md  OPTIMISATION.md  ROO_CODE.md  cargo_cheatsheet.md  clipboard-lintfixes.md  colornames.csv  consistency-actionables.md  file_list_ordering.txt  setup.md  userscript.js
rules/: linting-errors.md
scripts/: add_filename_comment.sh  run_benchmarks.sh  run_tests.sh  test_tui_app.sh
src/: args.md  lib.rs  main.rs
tests/: README.md  tmux_testing_strategy.md
(+231 files in other folders)
