[package]
name = "aibundle"
version = "0.7.0"
edition = "2021"
authors = ["Robin Collins <robin.f.collins@outlook.com>"]
license = "MIT"
repository = "https://github.com/robin-collins/aibundle"
keywords = ["ai", "llm", "bundle", "tui", "development"]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI & TUI file aggregator and formatter"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = { version = "1.8", optional = true }
crossterm = "0.28.1"
ratatui = "0.29.0"
walkdir = "2.4"
glob = "0.3"
ignore = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
itertools = "0.14.0"
regex = "1.9"
clipboard = "0.5"
rustdoc-stripper = "0.1.19"
tokio = { version = "1.37", features = ["fs", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"

[features]
default = []
parallel = ["rayon"]
