[package]
name = "aibundle"
version = "0.7.7"
edition = "2021"
authors = ["Robin Collins <robin.f.collins@outlook.com>"]
license = "MIT"
repository = "https://github.com/robin-collins/aibundle"
keywords = ["ai", "llm", "bundle", "tui", "development"]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI & TUI file aggregator and formatter"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
hostname = "0.4.1"
rayon = { version = "1.8", optional = true }
crossterm = "0.29.0"
ratatui = "0.29.0"
walkdir = "2.4"
glob = "0.3"
ignore = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
itertools = "0.14.0"
regex = "1.9"
clipboard = "0.5"
rustdoc-stripper = "0.1.19"
tokio = { version = "1.37", features = ["fs", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
lazy_static = "1.4.0"  # Added for filesystem caching

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.9.1"
tokio-test = "0.4"

[features]
default = []
parallel = ["rayon"]
profiling = []
